Apply url request interceptor on websocket connect as well

Try to match the types as best as we can, and handle the responses.

Pick-to: 6.4
Fixes: QTBUG-92932
Change-Id: I01bc85668d2540b79fd2a52796f99d05f161e8a5
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>